Moved camera controls to bottom of main area instead of in a fixed footer, adjusted some spacing, set up some placeholder camera controls to upload an image and switch cameras

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -151,7 +151,7 @@ p {
 	text-align: center;
 }
 
-.header, .controls, .main, .footer, .overlay {
+.header, .controls, .main, .overlay {
 	font-size: 16px;
 }
 
@@ -172,23 +172,47 @@ p {
 	height: 40px;
 	text-align: left;
 	padding: 10px 0;
+	white-space: nowrap;
+
+	.container {
+		display: grid;
+		grid-column-gap: 20px;
+		grid-template-columns: 1fr 3fr;
+		justify-content: space-evenly;
+	}
+}
+
+.control {
+	min-width: 40px;
 }
 
 .main {
 	display: flex;
 	flex-direction: column;
-	height: calc(100% - #{45px + 80px}); // header + footer
 	justify-content: center;
 	text-align: center;
 }
 
-.camera-controls .container {
-	align-items: center;
-	display: grid;
-	grid-column-gap: 20px;
-	grid-template-columns: 1fr 1fr 1fr;
-	justify-content: space-evenly;
+.camera-controls {
+	padding: 20px 0 10px 0;
 	text-align: center;
+
+	.container {
+		align-items: center;
+		display: grid;
+		grid-column-gap: 15px;
+		grid-template-columns: 2fr 1fr 2fr;
+		justify-content: space-evenly;
+		text-align: center;
+	}
+}
+
+.sources {
+	display: grid;
+	grid-column-gap: 15px;
+	grid-template-columns: repeat(auto-fit, minmax(40px, 0.5fr));
+	justify-content: space-evenly;
+	text-align: left;
 }
 
 .save {
@@ -203,16 +227,6 @@ p {
 		box-shadow: 0 0 2px 5px rgba($blue, 0.5);
 		outline: none;
 	}
-}
-
-.footer {
-	bottom: 0;
-	color: #fff;
-	left: 0;
-	padding: 10px 0;
-	position: fixed;
-	right: 0;
-	text-align: center;
 }
 
 .circle-wrap {
@@ -231,6 +245,10 @@ p {
 		.error {
 			margin: 1em auto;
 			width: 220px;
+		}
+
+		.fallback-message {
+			margin-top: 2em;
 		}
 	}
 }
